<resources>
    <string name="app_name">TaskYourTime</string>
    <string name="title_activity_list_note">ListNoteActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_to_do_list">ToDoListActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_item">AddItemActivity</string>

    <!-- Login and Sign up page strings -->
    <string name="taskYourTime">TaskYourTime</string>
    <string name="taskYourTime_logo_desc">TaskYourTime logo</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="or">or</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_error">Authentication error. Please check your information</string>
    <string name="sign_up_error">Please fill all required fields</string>
    <string name="sign_up_content_error">An error occurred. Please check given information</string>
    <string name="name_required_error">Name is required to sign up.</string>
    <string name="phone_required_error">Phone number is required to sign up.</string>
    <string name="email_required_error">Email address is required to sign up.</string>
    <string name="password_required_error">Password is required to sign up.</string>
    <string name="password_validation_error">Password must not contains symbols (@#$%^&amp;+=])</string>
    <string name="malformed_phone_error">This phone number is badly formatted.</string>
    <string name="malformed_email_error">This email address is badly formatted.</string>
    <string name="short_password_error">Password should be at least 6 characters.</string>
    <string name="select_image">Select Image</string>
    <string name="logout">Log Out</string>
    <string name="avatar_add">Adding avatar</string>

    <!-- Calendar view related strings -->
    <string name="add_calEvent">Add an event</string>
    <string name="your_event">Your event</string>
    <string name="date_separator">-</string>
    <string name="date_placeholder">dd/mm/yyyy (hh:mm)</string>
    <string name="delete_event">Delete the calendar event</string>
    <string name="tvInfo_placeholder">Friday 9th January 1970</string>
    <string name="info_day">%1$s %2$sth %3$s %4$s</string>
    <string name="date_display_placeholder">%1$s(%2$s)</string>

    <!-- Calendar add event related strings -->
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="begin_time">Begin time*</string>
    <string name="end_time">End time*</string>
    <string name="begin_date">Begin date*</string>
    <string name="end_date">End date*</string>
    <string name="event_title">Title*</string>
    <string name="event_title_placeholder">Title</string>
    <string name="date_picker_placeholder">%02d/%02d/%02d</string>
    <string name="time_picker_placeholder">%02d:%02d</string>
    <string name="error_message_placeholder">Error placeholder</string>
    <string name="validation_error_message">Please fill all required fields (*)</string>
    <string name="date_order_error_message">End date must be after begin date</string>
    <string name="add_error_message">An error occurred, please retry later</string>
    <string name="title_activity_list_group">ListGroupActivity</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
    <string name="title_activity_add_grp">AddGrpActivity</string>

    <!-- To Do List related strings -->
    <string name="add_item">Add a ToDo</string>
    <string name="item_description">New ToDo</string>
    <string name="item_name">Name</string>
    <string name="todo_name_placeholder">ToDo</string>
    <string name="error_description">Please give a name to your ToDo</string>
    <string name="todo_image">ToDo Image</string>

    <!-- Notes related strings -->
    <string name="note_name_placeholder">Note name</string>
    <string name="note_description_placeholder">Note description</string>
    <string name="delete_note">Delete note</string>
    <string name="add_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_title">Title</string>
    <string name="note_content">Content of your note</string>
    <string name="bold_symbol">B</string>
    <string name="italic_symbol">I</string>
    <string name="underline_symbol">U</string>
    <string name="nf_symbol">NF</string>
    <string name="back">Back</string>

    <!--Productive mode related string -->
    <string name="productive_mode">Productive Mode</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="productive_start">Start</string>
    <string name="productive_cancel">Cancel</string>
    <string name="time_picker_separator">:</string>

    <!--Groups related string -->
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="group_name">Group Name</string>
    <string name="group_owner">Group Owner</string>
    <string name="new_group">New Group</string>
    <string name="add_publication">Post publication</string>
    <string name="publication_title">Publication title</string>
    <string name="publication_content">Publication content</string>
    <string name="publication_content_title">Publication content title</string>
    <string name="event_begin">Event begin</string>
    <string name="event_end">Event end</string>
    <string name="publisher">Publisher</string>
    <string name="return_to_groups">Back to groups list</string>
    <string name="date_of_publication">date of publication</string>
    <string name="user_email_request">User email</string>
    <string name="add_user">Add user</string>
    <string name="group_error_placeholder">Error</string>
    <string name="no_user_error">Please add at least one user</string>
    <string name="group_name_error">Please give a name to your group</string>
    <string name="redundant_user">This user is already added in the group</string>
    <string name="user_not_find_error">User not found</string>
    <string name="create_group">Create</string>
    <string name="cancel_group_creation">Cancel</string>
    <string name="publish_date_placeholder">On %1$s</string>
    <string name="publish_owner_placeholder">Publish by %1$s</string>
    <string name="add_publication_title">Give a title to your publication</string>
    <string name="publish">Publish</string>
    <string name="cancel_publication">Cancel</string>
    <string name="generic_choice_content">Choice content</string>
</resources>