<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLight"
    tools:context=".note.AddNoteActivity">

    <TextView
        android:id="@+id/task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/add_note"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/ic_white_button"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteName">

        <Button
            android:id="@+id/boldButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/ic_white_button"
            android:textColor="@color/orange"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:textSize="19sp"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/bold_symbol" />

        <Button
            android:id="@+id/italicButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/orange"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:textStyle="italic"
            android:textSize="19sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/italic_symbol" />

        <Button
            android:id="@+id/underlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/orange"
            android:textSize="19sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/underline_symbol" />

        <Button
            android:id="@+id/noFormatButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/orange"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:textSize="19sp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/nf_symbol" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteContent"
        app:layout_constraintVertical_bias="0.8">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:background="@drawable/ic_red_button"
            android:textColor="@color/white"
            android:fontFamily="Time New Roman"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonCreateNote"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/ic_blue_button"
            android:textColor="@color/mainTextColor"
            android:fontFamily="Time New Roman"
            android:text="@string/confirm" />

    </LinearLayout>

    <EditText
        android:id="@+id/noteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="300dp"
        android:autofillHints="@string/note_title"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start"
        android:layout_marginTop="5dp"
        android:hint="@string/note_content"
        android:textColorHint="@color/gray"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/noteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="@string/note_title"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/white"
        android:ems="18"
        android:gravity="start"
        android:hint="@string/note_title"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task" />
</androidx.constraintlayout.widget.ConstraintLayout>