<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLight"
    tools:context=".calendar.VisualizeEventActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/ic_red_button"
            android:fontFamily="Time New Roman"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/buttonEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/ic_blue_button"
            android:fontFamily="Time New Roman"
            android:text="@string/confirm"
            android:textColor="@color/mainTextColor"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/your_event"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/eventName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />



    <EditText
        android:id="@+id/eventDescription"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_marginBottom="70dp"
        android:autofillHints="@string/description"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/description"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/eventEndTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eventEndTime"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/eventBeginDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/white"
        android:hint="@string/begin_date"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/eventBeginTime"
        app:layout_constraintEnd_toEndOf="@+id/eventName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eventName"
        android:autofillHints="@string/begin_date" />

    <TextView
        android:id="@+id/eventBeginTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/begin_time"
        android:textSize="18sp"
        android:textColorHint="@color/gray"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/eventEndDate"
        app:layout_constraintEnd_toEndOf="@+id/eventBeginDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eventBeginDate"
        android:autofillHints="@string/begin_time" />

    <TextView
        android:id="@+id/eventEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/end_date"
        android:textSize="18sp"
        android:textColorHint="@color/gray"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/eventEndTime"
        app:layout_constraintEnd_toEndOf="@+id/eventBeginTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eventBeginTime"
        android:autofillHints="@string/end_date" />

    <TextView
        android:id="@+id/eventEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/white"
        android:hint="@string/end_time"
        android:textSize="18sp"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/eventDescription"
        app:layout_constraintEnd_toEndOf="@+id/eventEndDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eventEndDate"
        android:autofillHints="@string/end_time" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:hint="@string/event_title"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/eventBeginDate"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        android:autofillHints="@string/event_title" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="2dp"
        android:text="@string/error_message_placeholder"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDescription" />

    <View
        android:id="@+id/divider"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>